--- a/www/views/plugs.html
+++ b/www/views/plugs.html
@@ -12,7 +12,7 @@
             on-refresh="plugRefresh()">
     </ion-refresher>
 
-    <div class="card">
+    <div class="list card">
 
         <div ng-if="plugs.length == 0" class="item"><h3>No plugs yet. Add some! </h3></div>
 
