--- a/www/views/settings.html
+++ b/www/views/settings.html
@@ -20,4 +20,7 @@
             ></select>
     <br><hr>
 
+    <h4>Danger Zone</h4>
+    <button class="button button-assertive" ng-click="clearLocalStorageData()">Clear Local Storage</button>
+
 </ion-content>
