--- a/www/views/editUser.html
+++ b/www/views/editUser.html
@@ -24,7 +24,7 @@
             <input type="text" disabled ng-model="editUser.personalDevice.dnsName">
         </label>
 
-        <button class="button button-block button-positive" ng-click="submitUser(editUser)">
+        <button class="button button-block button-positive" ng-click="updateUser(editUser)">
             Submit
         </button>
         <button class="button button-block button-assertive" ng-click="deleteUser(editUser)">
