--- a/www/views/groups.html
+++ b/www/views/groups.html
@@ -1,32 +1,40 @@
 <ion-header-bar>
     <a href="#/" class="button button-clear button-positive icon ion-home"></a>
+
     <h1 class="title">Groups</h1>
     <a href="#/groups/add" class="button button-clear button-balanced icon ion-plus "></a>
 
 </ion-header-bar>
 
-<ion-content has-header="true" has-footer="true" padding="true">
+<ion-content has-header="true" has-footer="true" padding="false">
 
-    <div class="card" ng-repeat="foo in bar">
-        <div class="item item-thumbnail-left">
-
-            <img src="/images/litUp_200.png" alt="" ng-if="plug.lastKnownState"/>
-            <img src="/images/notLitUp_200.png" alt="" ng-if="!plug.lastKnownState"/>
-
-            <h3>{{plug.label}}</h3>
+    <ion-refresher
+            pulling-text="Pull to refresh..."
+            on-refresh="groupListPullRefresh()">
+    </ion-refresher>
 
 
-            <div class="col col-50">
-                <button ng-click="setPlugState(plug, true)" class="button button-outline">
-                    <i class="icon ion-power balanced"></i>
-                </button>
+    <div class="list card">
 
-                <button ng-click="setPlugState(plug, false)" class="button button-outline">
-                    <i class="icon ion-power assertive"></i>
-                </button>
+        <div ng-if="groups.length == 0" class="item"><h3>No groups yet. Add some! </h3></div>
+
+        <a href="#/groups/{{group.id}}">
+            <div class="item" ng-repeat="group in groups">
+                <!--<a href="#/groups/{{group.id}}" class="energized"><i class="icon ion-wrench"></i></a>-->
+                <div class="row">
+                    <button ng-click="setPlugState(plug, true)" class="col-20 button button-outline pull-left">
+                        <i class="icon ion-power balanced"></i>
+                    </button>
+                    <h2 class="col" style="text-align: center">{{group.label}}</h2>
+                    <button ng-click="setPlugState(plug, false)" class="col-20 button button-outline">
+                        <i class="icon ion-power assertive"></i>
+                    </button>
+                </div>
             </div>
-        </div>
+        </a>
+
     </div>
+
 
 </ion-content>
 
