--- a/www/views/editGroup.html
+++ b/www/views/editGroup.html
@@ -5,15 +5,13 @@
 </ion-header-bar>
 
 <ion-content has-header="true" has-footer="true" padding="true">
-
-
     <h4>Contained Plugs:</h4>
             <div class="list">
                 <label class="item item-input">
-                    <input type="text" placeholder="Living room lights" ng-model="editGroup.label" ng-required="true">
+                    <input type="text" placeholder="Living room lights" ng-model="editGroup.label"
+                           ng-required="true">
                 </label>
             </div>
-
 
     <h4>Contained Plugs:</h4>
     <div class="list">
@@ -28,15 +26,9 @@
             <li ng-repeat="user in editGroup.users" class="item">{{user}}</li>
         </ul>
     </div>
-
         <button class="button button-block button-assertive" ng-click="deleteGroup(editGroup)">
             Delete
         </button>
-
     </div>
-
-
-
-
 </ion-content>
 
