--- a/www/views/addPlug.html
+++ b/www/views/addPlug.html
@@ -23,6 +23,11 @@
             </label>
         </div>
 
+        <div class="list">
+
+
+        </div>
+
         <button class="button button-block button-positive" ng-click="submitPlug(newPlug)">
             Add to home!
         </button>
