--- a/www/views/users.html
+++ b/www/views/users.html
@@ -1,10 +1,14 @@
-<ion-header-bar>
-    <a href="#/" class="button button-clear button-positive icon ion-home"></a>
-
+<ion-header-bar >
+    <div class="buttons">
+        <a href="#/" class="button button-clear button-positive icon ion-home"></a>
+    </div>
     <h1 class="title">Users</h1>
-    <a href="#/users/add" class="button button-clear button-balanced icon ion-plus "></a>
-
+    <div class="buttons">
+        <a href="#/users/add" class="button button-clear button-balanced icon ion-plus "></a>
+    </div>
 </ion-header-bar>
+
+
 
 <ion-content has-header="true" has-footer="true">
 
