styling on main page, fix

--- a/www/views/main.html
+++ b/www/views/main.html
@@ -8,30 +8,34 @@
 
     <div class="row">
         <div class="col">
-            <div class="card">
-                <a href="#/groups" class="item item-text-wrap item-icon-right dark-bg light">Plug groups
-                    <i class="icon ion-grid"></i></a>
-            </div>
+
+                <a href="#/groups" class="button icon-right button-dark dark-bg button-full ion-grid">Groups</a>
+                <!--<a href="#/groups" class="item item-text-wrap item-icon-right dark-bg light">
+                    <i class="icon ion-grid"></i></a>-->
+
         </div>
         <div class="col">
-            <div class="card">
+            <a href="#/plugs" class="button icon-right button-dark dark-bg button-full ion-power">Plugs</a>
+            <!--<div class="card">
                 <a href="#/plugs" class="item item-text-wrap item-icon-right dark-bg light">Plugs
                     <i class="icon ion-power"></i></a>
-            </div>
+            </div>-->
         </div>
     </div>
     <div class="row">
         <div class="col">
-            <div class="card">
-                <a href="#/settings" class="item item-text-wrap item-icon-right dark-bg light">Settings
+            <a href="#/settings" class="button icon-right button-dark dark-bg button-full ion-settings">Settings</a>
+            <!--<div class="card">
+                <a href="#/settings" class="item item-text-wrap item-icon-right dark-bg light">Setting
                     <i class="icon ion-settings"></i></a>
-            </div>
+            </div>-->
         </div>
         <div class="col">
-            <div class="card">
+            <a href="#/users" class="button icon-right button-dark dark-bg button-full ion-person-stalker">Users</a>
+            <!--<div class="card">
                 <a href="#/users" class="item item-text-wrap item-icon-right dark-bg light">Users
                     <i class="icon ion-person-stalker"></i></a>
-            </div>
+            </div>-->
         </div>
     </div>
 
