updated some http to resource

--- a/www/views/addUser.html
+++ b/www/views/addUser.html
@@ -23,7 +23,7 @@
                     ></select>
         </label>
 
-        <button class="button button-block button-positive" ng-click="submitUser(newUser)">
+        <button class="button button-block button-positive" ng-click="save(newUser)">
             Submit User!
         </button>
     </div>
