--- a/www/views/groups.html
+++ b/www/views/groups.html
@@ -19,22 +19,23 @@
         <div ng-if="groups.length == 0" class="item"><h3>No groups yet. Add some! </h3></div>
 
 
-        <div class="item" ng-repeat="group in groups">
-            <a href="#/groups/{{group.id}}">
-                <!--<a href="#/groups/{{group.id}}" class="energized"><i class="icon ion-wrench"></i></a>-->
-                <div class="row">
-                    <button ng-click="setPlugState(plug, true)" class="col-20 button button-outline pull-left">
-                        <i class="icon ion-power balanced"></i>
-                    </button>
-                    <h2 class="col" style="text-align: center">{{group.label}}</h2>
-                    <button ng-click="setPlugState(plug, false)" class="col-20 button button-outline">
-                        <i class="icon ion-power assertive"></i>
-                    </button>
-                </div>
-            </a>
+        <div class="item item-icon-right" ng-repeat="group in groups">
+
+            <!--<a href="#/groups/{{group.id}}" class="energized"><i class="icon ion-wrench"></i></a>-->
+
+            <h3>{{group.label}}</h3>
+
+            <div class="col col-50">
+                <button class="button button-outline">
+                    <i class="icon ion-power balanced"></i>
+                </button>
+
+                <button class="button button-outline">
+                    <i class="icon ion-power assertive"></i>
+                </button>
+            </div>
+            <a href="#/groups/{{group.id}}" class="dark"><i class="icon ion-wrench"></i></a>
         </div>
-
-
     </div>
 
 
