--- a/www/views/users.html
+++ b/www/views/users.html
@@ -30,7 +30,7 @@
 
             <h2>{{user.username}}</h2>
             <span>({{user.state}})</span>
-            <a href="#/users/{{user.username}}" class="dark"><i class="icon ion-wrench"></i></a>
+            <a href="#/users/{{user.id}}" class="dark"><i class="icon ion-wrench"></i></a>
 
         </div>
     </div>
